[gd_scene load_steps=51 format=3 uid="uid://2rneqqeobwk6"]

[ext_resource type="Texture2D" uid="uid://dyea4bvjxiqbs" path="res://assets/samurai_sprites/IDLE.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bwff2daf0b7m3" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://crp664f2slwbf" path="res://assets/samurai_sprites/ATTACK 1.png" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://cgc0ti7th468x" path="res://assets/samurai_sprites/RUN.png" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://4w6k7mvniqhu" path="res://music/tap.wav" id="5_qlg0r"]
[ext_resource type="Script" uid="uid://bntxu2qsc51sm" path="res://scripts/Player_state_scripts/state_machine.gd" id="6_tuyoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("2_dqkch")
region = Rect2(96, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("2_dqkch")
region = Rect2(192, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("2_dqkch")
region = Rect2(288, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("2_dqkch")
region = Rect2(384, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("2_dqkch")
region = Rect2(480, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("2_dqkch")
region = Rect2(576, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(288, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(384, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(480, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(576, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(672, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(768, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(864, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_qhqgy")
region = Rect2(672, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("3_qhqgy")
region = Rect2(864, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_qhqgy")
region = Rect2(96, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_qhqgy")
region = Rect2(192, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("3_qhqgy")
region = Rect2(288, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_qhqgy")
region = Rect2(384, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(480, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(576, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_qhqgy")
region = Rect2(672, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("3_qhqgy")
region = Rect2(768, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("3_qhqgy")
region = Rect2(864, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_qhqgy")
region = Rect2(960, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(1056, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("3_qhqgy")
region = Rect2(1152, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("3_qhqgy")
region = Rect2(1248, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("3_qhqgy")
region = Rect2(1344, 43, 96, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("3_qhqgy")
region = Rect2(1440, 43, 96, 43)

[sub_resource type="SpriteFrames" id="SpriteFrames_3v2ag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}],
"loop": false,
"name": &"attack1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}],
"loop": false,
"name": &"jump",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qhqgy"]
radius = 5.0

[sub_resource type="Animation" id="Animation_tuyoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tap:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "attack1"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tap:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.06666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "attack_proper"
length = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"attack1", &"idle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlg0r"]
_data = {
&"RESET": SubResource("Animation_tuyoq"),
&"attack1": SubResource("Animation_dqkch"),
&"attack_proper": SubResource("Animation_qlg0r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(23.34499, 35.17694)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tuyoq"]
radius = 5.0
height = 24.0

[node name="Samurai" type="CharacterBody2D"]
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1, 1.0416667)
sprite_frames = SubResource("SpriteFrames_3v2ag")
animation = &"attack1"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 1)
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qlg0r")
}

[node name="tap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qlg0r")
volume_db = 11.093

[node name="weapon_pivot" type="Marker2D" parent="."]

[node name="AttackArea" type="Area2D" parent="weapon_pivot"]
position = Vector2(7, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapon_pivot/AttackArea"]
position = Vector2(25.999998, 0.99999905)
rotation = 0.16755165
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_dqkch")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(5, 0)
shape = SubResource("CapsuleShape2D_tuyoq")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_tuyoq")

[node name="Idle" type="Node" parent="StateMachine"]

[node name="Move" type="Node" parent="StateMachine"]

[node name="Jump" type="Node" parent="StateMachine"]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="weapon_pivot/AttackArea" to="." method="_on_attack_area_area_entered"]
